--- a/index.html
+++ b/index.html
@@ -5,51 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOC TOC TOC</title>
     <style>
-        :root { --cor-fundo: #e0f7fa; --cor-detalhe: #00796b; }
-        body { font-family: sans-serif; background: var(--cor-fundo); margin: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
-        .app-container { width: 100%; max-width: 400px; height: 90vh; background: white; border-radius: 30px; display: flex; flex-direction: column; align-items: center; padding: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
-        .tela { display: none; text-align: center; width: 100%; flex-direction: column; justify-content: space-around; height: 100%; }
-        .ativa { display: flex; }
-        .porta-img { width: 180px; cursor: pointer; }
-        .tatu-principal { width: 200px; margin: 20px 0; }
-        .grid-icones { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
-        .icon-btn { background: #f0f0f0; border-radius: 15px; padding: 10px; cursor: pointer; border: 2px solid transparent; }
-        .icon-btn img { width: 100%; border-radius: 8px; }
-        h2 { color: var(--cor-detalhe); font-size: 1.2rem; }
+        body { font-family: sans-serif; background: #e0f7fa; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
+        .box { width: 320px; background: white; padding: 25px; border-radius: 30px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
+        .tela { display: none; }
+        .ativa { display: block; }
+        img { width: 100%; max-width: 180px; cursor: pointer; border-radius: 15px; margin: 15px 0; }
+        .grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-top: 15px; }
+        .btn-icon { background: #f5f5f5; padding: 8px; border-radius: 12px; cursor: pointer; border: 1px solid #eee; }
+        .btn-icon img { width: 100%; margin: 0; border-radius: 5px; }
+        .btn-icon p { font-size: 10px; margin: 5px 0 0; font-weight: bold; color: #00796b; }
+        h2 { color: #00796b; font-size: 1.2rem; margin: 0; }
     </style>
 </head>
 <body>
-<div class="app-container">
-    <div id="tela-1" class="tela ativa">
-        <h2>Bata na porta para falar...</h2>
-        <img src="assets/images/porta_fechada.png" class="porta-img" onclick="irPara(2)">
-        <p>"TOC TOC TOC"</p>
-    </div>
-    <div id="tela-2" class="tela">
-        <h2>O que o Tatu está sentindo?</h2>
-        <img src="assets/images/tatu_neutro.png" id="tatu-visual" class="tatu-principal">
-        <div class="grid-icones">
-            <div class="icon-btn" onclick="sentir('no', 'tatu_enrolado.png')"><img src="assets/images/sensacao_no.png"><p>Nó</p></div>
-            <div class="icon-btn" onclick="sentir('raiva', 'tatu_triste.png')"><img src="assets/images/sensacao_raio.png"><p>Explosão</p></div>
-            <div class="icon-btn" onclick="sentir('choro', 'tatu_triste.png')"><img src="assets/images/sensacao_lagrimas.png"><p>Choro</p></div>
+    <div class="box">
+        <div id="t1" class="tela ativa">
+            <h2>Bata na porta...</h2>
+            <img src="assets/porta_batida.png" onclick="ir(2)">
+            <p>"TOC TOC TOC"</p>
+        </div>
+
+        <div id="t2" class="tela">
+            <h2>O que o Tatu sente?</h2>
+            <img src="assets/tatu_neutro.png" id="tatu">
+            <div class="grid">
+                <div class="btn-icon" onclick="sentir('tatu_enrolado.png')"><img src="assets/sensacao_no.png"><p>Nó</p></div>
+                <div class="btn-icon" onclick="sentir('tatu_triste.png')"><img src="assets/sensacao_raio.png"><p>Raiva</p></div>
+                <div class="btn-icon" onclick="sentir('tatu_triste.png')"><img src="assets/sensacao_lagrimas.png"><p>Choro</p></div>
+            </div>
+        </div>
+
+        <div id="t3" class="tela">
+            <h2>A porta abriu!</h2>
+            <img src="assets/porta_aberta.png">
+            <p>Você não está mais sozinho.</p>
+            <button onclick="location.reload()" style="margin-top:10px; padding:12px 20px; background:#00796b; color:white; border:none; border-radius:10px; cursor:pointer;">Recomeçar</button>
         </div>
     </div>
-    <div id="tela-3" class="tela">
-        <h2>A porta se abriu!</h2>
-        <img src="assets/images/porta_aberta.png" class="porta-img">
-        <p>O Tatu foi ouvido e acolhido.</p>
-        <button onclick="location.reload()" style="padding:15px; background:var(--cor-detalhe); color:white; border:none; border-radius:10px;">Reiniciar</button>
-    </div>
-</div>
-<script>
-    function irPara(tela) {
-        document.querySelectorAll('.tela').forEach(t => t.classList.remove('ativa'));
-        document.getElementById('tela-' + tela).classList.add('ativa');
-    }
-    function sentir(tipo, imgTatu) {
-        document.getElementById('tatu-visual').src = "assets/images/" + imgTatu;
-        setTimeout(() => irPara(3), 1000);
-    }
-</script>
+
+    <script>
+        function ir(n) {
+            document.querySelectorAll('.tela').forEach(t => t.classList.remove('ativa'));
+            document.getElementById('t'+n).classList.add('ativa');
+        }
+        function sentir(imgNome) {
+            // Atualiza a imagem do tatu usando o caminho da pasta assets
+            document.getElementById('tatu').src = 'assets/' + imgNome;
+            setTimeout(() => ir(3), 1000);
+        }
+    </script>
 </body>
 </html>
