--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .btn-opcao { border: 3px solid #eee; border-radius: 20px; padding: 10px; cursor: pointer; background: #fff; transition: 0.2s; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 120px; }
         .btn-opcao:active { transform: scale(0.95); border-color: var(--primary); }
         .btn-opcao img { width: 80px; height: 80px; object-fit: contain; }
-        .btn-opcao p { font-size: 11px; font-weight: bold; margin: 8px 0 0; color: #555; line-height: 1.2; }
+        .btn-opcao p { font-size: 11px; font-weight: bold; margin: 8px 0 0; color: #555; line-height: 1.2; text-transform: uppercase; }
         
         input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ccc; border-radius: 10px; box-sizing: border-box; }
         .btn-main { background: var(--primary); color: white; padding: 15px; width: 100%; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; margin-top: 15px; }
@@ -39,7 +39,7 @@
     </div>
 
     <div id="t1" class="tela">
-        <h2>Como o Tatu está?</h2>
+        <h2>Como o Tatu está agora?</h2>
         <div class="grid">
             <div class="btn-opcao" onclick="fluxo('Sentimento', 'Feliz', 2, 'tatu_feliz.png')"><img src="tatu_feliz.png"><p>FELIZ</p></div>
             <div class="btn-opcao" onclick="fluxo('Sentimento', 'Triste', 2, 'tatu_triste.png')"><img src="tatu_triste.png"><p>TRISTE</p></div>
@@ -82,6 +82,7 @@
     <div id="t5" class="tela">
         <h2>O corpo sente...</h2>
         <div class="grid">
+            <div class="btn-opcao" onclick="fluxo('Corpo', 'Felicidade', 6, 'tatu_feliz.png')"><img src="tatu_feliz.png"><p>FELICIDADE</p></div>
             <div class="btn-opcao" onclick="fluxo('Corpo', 'Nó na garganta', 6, 'tatu_enrolado.png')"><img src="sensacao_no.png"><p>NÓ NA GARGANTA</p></div>
             <div class="btn-opcao" onclick="fluxo('Corpo', 'Raiva', 6, 'tatu_triste.png')"><img src="sensacao_raio.png"><p>RAIVA</p></div>
             <div class="btn-opcao" onclick="fluxo('Corpo', 'Choro', 6, 'tatu_triste.png')"><img src="sensacao_lagrimas.png"><p>CHORO</p></div>
